# cai2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TRAINING_GUIDE.md
eval/: evaluation.cpp  evaluation.h
nnue/: evaluator.cpp  evaluator.h  network.cpp  network.h
racing/: __init__.py  car_controller.py  track.py
racing/tests/: test_car_controller.py  test_track.py
src/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  move.h  movegen.cpp  movegen.h  notation.cpp  notation.h  perft.cpp  perft.h  search.cpp  search.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
tests/: test_evaluation.cpp  test_nnue.cpp  test_perft.cpp  test_search.cpp  test_selfplay.cpp  test_training.cpp
tools/: teacher.cpp  teacher.h  time_manager.h  tuning.cpp  tuning.h
training/: TRAINING_ANALYSIS.md  elo_tracker.cpp  elo_tracker.h  gpu_backend.cpp  gpu_backend.h  learning_regimen.cpp  learning_regimen.h  pgn_importer.cpp  pgn_importer.h  selfplay.cpp  selfplay.h  trainer.cpp  trainer.h  trainer_cuda.cu  training_metrics.cpp  training_metrics.h
